force-app/main/default/objects/sfqz__Quiz_Answer__c/sfqz__Quiz_Answer__c.object-meta.xml
<CustomObject>
    <label>Quiz Answer</label>
    <nameField>
        <displayFormat>QA-{0000}</displayFormat>
        <label>Answer Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quiz Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>