force-app/main/default/objects/sfqz__Quiz_Answer__c/fields/sfqz__Question__c.field-meta.xml
<CustomField>
    <fullName>sfqz__Question__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Question</label>
    <referenceTo>sfqz__Quiz_Question__c</referenceTo>
    <relationshipLabel>Quiz Answers</relationshipLabel>
    <relationshipName>Quiz_Answers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>