force-app/main/default/objects/sfqz__Quiz_Answer__c/fields/sfqz__Score__c.field-meta.xml
<CustomField>
    <fullName>sfqz__Score__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Score for the given player and question.</description>
    <inlineHelpText>Score for the given player and question.</inlineHelpText>
    <label>Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>