force-app/main/default/objects/sfqz__Quiz_Answer__c/fields/sfqz__Timestamp__c.field-meta.xml
<CustomField>
    <fullName>sfqz__Timestamp__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Timestamp</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>