force-app/main/default/objects/sfqz__Quiz_Answer__c/listViews/sfqz__All.listView-meta.xml
<ListView>
    <fullName>sfqz__All</fullName>
    <columns>NAME</columns>
    <columns>sfqz__Player__c</columns>
    <columns>sfqz__Question__c</columns>
    <columns>sfqz__Timestamp__c</columns>
    <columns>sfqz__Answer__c</columns>
    <columns>sfqz__IsCorrect__c</columns>
    <columns>sfqz__Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>